change PhotonServiceImpl